✨ feat(web): Create events page

--- a/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/MoreLinks.astro
@@ -15,6 +15,10 @@ const MORE_LINKS = [
     name: "Nous contacter",
     url: "/contact",
   },
+  {
+    name: "Nos événements",
+    url: "/evenements",
+  },
 ];
 ---
 
