🎨 style(web): Change newsletter preview + fix naming files for astro

--- a/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
+++ b/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
@@ -2,8 +2,8 @@
 import { cn } from "@/libs/tailwind";
 
 import Thumbnail from "./Thumbnail.astro";
-import newsletter from "./assets/_newsletter.jpg";
-import newsletter2 from "./assets/_newsletter2.jpg";
+import newsletter from "./assets/_newsletter_1.webp";
+import newsletter2 from "./assets/_newsletter_2.webp";
 
 const THUMBNAIL_WIDTH = 350;
 ---
