--- a/apps/web/src/pages/quiz/bourgeois-test/index.astro
+++ b/apps/web/src/pages/quiz/bourgeois-test/index.astro
@@ -3,7 +3,7 @@ import PageLayout from "@/layout/PageLayout/PageLayout.astro";
 import H2 from "@/components/H2";
 import H3 from "@/components/H3";
 import { Image } from "astro:assets";
-import CoverImage from "./assets/cover.webp";
+import CoverImage from "./_assets/_cover.webp";
 import { QUESTIONS, BAREMES } from "./bourgeois-test";
 import { Button } from "@/components/ui/button";
 import { cn } from "@/libs/tailwind";
