--- a/apps/web/src/pages/abonnements/index.astro
+++ b/apps/web/src/pages/abonnements/index.astro
@@ -207,5 +207,20 @@ const coverImage = "https://frustrationmagazine.fr/covers/numero_2025.webp";
     <div class={cn("mt-6 mb-6", "md:mt-12 md:mb-12")}>
       <CheckoutFormWrapper client:load />
     </div>
+
+    <p class="mt-16 bg-green-100 text-green-600 font-semibold p-4">
+      💡 Vous pouvez à tout moment modifier, mettre à jour ou résilier votre
+      abonnement sur notre portail abonnés <a
+        class="underline text-blue"
+        href="https://billing.stripe.com/p/login/14kdTMeda0rk9gc9AA"
+        target="_blank"
+        >en cliquant à cette adresse</a
+      > en utilisant l'adresse renseignée lors de votre souscription. En cas de difficulté
+      ou pour toute autre question, contactez-nous à <a
+        class="underline text-blue"
+        href="mailto:redaction@frustrationmagazine.fr"
+        >redaction@frustrationmagazine.fr.</a
+      >
+    </p>
   </article>
 </PageLayout>
