--- a/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
+++ b/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
@@ -54,7 +54,7 @@ const THUMBNAIL_WIDTH = 350;
           "md:text-left md:text-base",
         )}>
         <span class="xs:inline hidden"> 🗞️ </span>
-        Recevez régulièrement nos dernières publications !
+        Recevez régulièrement nos dernières actualités !
       </p>
       <form
         id="form-newsletter-footer"
