--- a/apps/web/src/styles/wordpress.css
+++ b/apps/web/src/styles/wordpress.css
@@ -1,44 +1,60 @@
-.content iframe {
-  width: 100%;
-  height: 500px;
+.content {
+  --font-size: 1.125rem;
+  --line-height: 1.7;
+  --color: #fccf00;
+
+  font-size: var(--font-size);
+  line-height: var(--line-height);
 }
 
+/* Videos youtube */
+.content div:has(iframe[src^="https://www.youtube.com"])
+{
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
+.content iframe {
+  width: 100%;
+  height: 100%;
+}
+
+/* Headings */
 .content h2 {
   color: #fff200;
   background: black;
   font-size: clamp(30px, 7vw, 50px);
   line-height: 120%;
-  width: fitcontent;
   text-transform: uppercase;
   font-family: "Bebas Neue", sans-serif;
   padding: 12px 15px 10px 15px;
   margin-top: 45px;
   margin-bottom: 25px;
 }
-
 .content h3 {
   margin-bottom: 1.5rem;
   font-family: "Bakbak", sans-serif;
   font-size: 2.25rem;
   font-weight: bold;
   text-decoration: underline;
-  text-decoration-color: #fccf00;
+  text-decoration-color: var(--color);
   text-underline-offset: -5px;
   text-decoration-skip-ink: none;
   text-decoration-thickness: 10px;
 }
 
+/* Links */
 .content a {
   text-decoration: underline;
   text-decoration-thickness: 3px;
-  text-decoration-color: #fccf00;
+  text-decoration-color: var(--color);
   text-underline-offset: 2px;
 }
+
+/* Paragraphs */
 .content p {
   margin-bottom: 15px;
   font-family: "Open Sans", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 30px;
+  font-size: var(--font-size);
   font-weight: 400;
 }
 
@@ -47,12 +63,11 @@
 }
 
 .content p.has-large-font-size {
-  font-size: 26px;
+  font-size: calc(var(--font-size) * 1.25);
 }
 
 .content blockquote {
   border-left: 5px solid #fff200;
-  margin: 0 0 1.75em;
   padding-left: 1em;
 }
 
