💬 wording(web): Fix spelling in subcription page

--- a/apps/web/src/pages/abonnements/index.astro
+++ b/apps/web/src/pages/abonnements/index.astro
@@ -215,8 +215,8 @@ const coverImage = "https://frustrationmagazine.fr/covers/numero_2025.webp";
         href="https://billing.stripe.com/p/login/14kdTMeda0rk9gc9AA"
         target="_blank"
         >en cliquant à cette adresse</a
-      > en utilisant l'adresse renseignée lors de votre souscription. En cas de difficulté
-      ou pour toute autre question, contactez-nous à <a
+      > et en utilisant l'adresse renseignée lors de votre souscription. En cas de
+      difficulté ou pour toute autre question, contactez-nous à <a
         class="underline text-blue"
         href="mailto:redaction@frustrationmagazine.fr"
         >redaction@frustrationmagazine.fr.</a
