--- a/apps/web/src/pages/_components/Interviews/Title.astro
+++ b/apps/web/src/pages/_components/Interviews/Title.astro
@@ -4,7 +4,7 @@ import { cn } from "@/libs/tailwind";
 
 <h2
   class={cn(
-    "title relative m-auto  w-fit font-bakbak uppercase text-white",
+    "title relative m-auto  w-fit font-bakbak uppercase text-white select-none",
     "text-4xl mb-2",
     "xs:text-5xl mb-3",
     "sm:text-6xl sm:mb-8",
