🔨 refactor(dashboard): Big refacto and databases changes

--- a/apps/web/src/pages/quiz/bourgeois-test/index.astro
+++ b/apps/web/src/pages/quiz/bourgeois-test/index.astro
@@ -4,7 +4,7 @@ import H2 from "@/components/H2";
 import H3 from "@/components/H3";
 import { Image } from "astro:assets";
 import CoverImage from "./_assets/_cover.webp";
-import { QUESTIONS, BAREMES } from "./bourgeois-test";
+import { QUESTIONS, BAREMES } from "./_bourgeois-test";
 import { Button } from "@/components/ui/button";
 import { cn } from "@/libs/tailwind";
 
