--- a/apps/web/src/styles/wordpress.css
+++ b/apps/web/src/styles/wordpress.css
@@ -1,7 +1,9 @@
 .content {
   --font-size: 1.125rem;
   --line-height: 1.7;
-  --color: #fccf00;
+
+  --yellow: #fff200;
+  --alternate-yellow: #fccf00;
 
   font-size: var(--font-size);
   line-height: var(--line-height);
@@ -20,7 +22,7 @@
 
 /* Headings */
 .content h2 {
-  color: #fff200;
+  color: var(--yellow);
   background: black;
   font-size: clamp(30px, 7vw, 50px);
   line-height: 120%;
@@ -37,7 +39,7 @@
   font-size: clamp(25px, 5vw, 40px);
   font-weight: bold;
   text-decoration: underline;
-  text-decoration-color: var(--color);
+  text-decoration-color: var(--alternate-yellow);
   text-underline-offset: -5px;
   text-decoration-skip-ink: none;
   text-decoration-thickness: 10px;
@@ -47,7 +49,7 @@
 .content a {
   text-decoration: underline;
   text-decoration-thickness: 3px;
-  text-decoration-color: var(--color);
+  text-decoration-color: var(--alternate-yellow);
   text-underline-offset: 2px;
 }
 
@@ -68,7 +70,7 @@
 }
 
 .content blockquote {
-  border-left: 5px solid #fff200;
+  border-left: 5px solid var(--yellow);
   padding-left: 1em;
 }
 
