--- a/apps/web/src/layout/BaseLayout/Footer/components/Newsletter.astro
+++ b/apps/web/src/layout/BaseLayout/Footer/components/Newsletter.astro
@@ -23,7 +23,7 @@ import H5 from "./H5.astro";
     id="form-newsletter-banner"
     class="flex flex-col gap-3 w-full max-w-[600px]">
     <input
-      class="px-5 py-2"
+      class="px-5 bg-white py-2"
       required
       name="email"
       placeholder="Email"
