--- a/apps/web/src/layout/BaseLayout/Header/Header.astro
+++ b/apps/web/src/layout/BaseLayout/Header/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import frustrationLogo from "./frustration-logo-header.webp";
+import frustrationLogo from "./frustration-logo.webp";
 import Banner from "./banners/Banner.astro";
 import SearchOverlay from "./components/SearchOverlay";
 import CategoriesOverlay from "./components/CategoriesOverlay";
