--- a/apps/web/src/pages/_components/MainSlider/ArrowButtons.astro
+++ b/apps/web/src/pages/_components/MainSlider/ArrowButtons.astro
@@ -3,7 +3,7 @@ import ArrowButtonIcon from "./ArrowButtonIcon.svg?raw";
 ---
 
 <div
-  class="splide__arrows [&>button>svg]:fill-frustration-yellow lg:[&>button>svg]:h-[50px]! lg:[&>button>svg]:w-[30px]! [&>button]:top-[90%] lg:[&>button]:top-[93.5%] lg:[&>button]:h-[70px]! lg:[&>button]:w-[70px]! xl:[&>button]:top-[50%]">
+  class="splide__arrows [&>button>svg]:fill-frustration-yellow! lg:[&>button>svg]:h-[50px]! lg:[&>button>svg]:w-[30px]! [&>button]:top-[90%]! lg:[&>button]:top-[93.5%]! lg:[&>button]:h-[70px]! lg:[&>button]:w-[70px]! xl:[&>button]:top-[50%]!">
   <button class="splide__arrow splide__arrow--prev left-12!">
     <Fragment set:html={ArrowButtonIcon} />
   </button>
