--- a/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
+++ b/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
@@ -67,7 +67,7 @@ const THUMBNAIL_WIDTH = 350;
           name="email"
           placeholder="Entrez votre email ici"
           class={cn(
-            "h-[40px] w-full rounded-full px-6 py-2 font-open-sans text-black text-base",
+            "h-[40px] bg-white w-full rounded-full px-6 py-2 font-open-sans text-black text-base",
           )}
         />
         {/* 📩 Button */}
