--- a/apps/web/src/pages/_components/NewsletterBanner/Thumbnail.astro
+++ b/apps/web/src/pages/_components/NewsletterBanner/Thumbnail.astro
@@ -4,22 +4,17 @@ import { cn } from "@/libs/tailwind";
 import { Image } from "astro:assets";
 
 const { width, src, reverse } = Astro.props;
-
-const NEWSLETTER_URL =
-  "https://www.frustrationmagazine.fr/?mailpoet_router&endpoint=view_in_browser&action=view&data=WzY4LCI1NWU3MmQ0MmVjNjQiLDAsMCwzNDY1LDFd";
 ---
 
-<a
-  href={NEWSLETTER_URL}
+<div
   class={cn("cursor-pointer hover:[animation-play-state:paused]", {
     "animate-sliding": !reverse,
-    "animate-slidingReverse": reverse,
-  })}
-  target="_blank">
+    "animate-sliding-reverse": reverse,
+  })}>
   <Image
     src={src}
     alt="Exemple de newsletter"
     width={width}
     class="shadow-lg"
   />
-</a>
+</div>
