--- a/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
+++ b/apps/web/src/pages/_components/NewsletterBanner/NewsletterBanner.astro
@@ -67,14 +67,14 @@ const THUMBNAIL_WIDTH = 350;
           name="email"
           placeholder="Entrez votre email ici"
           class={cn(
-            "h-[40px] bg-white w-full rounded-full px-6 py-2 font-open-sans text-black text-base",
+            "h-[40px] bg-white disabled:bg-white/10 w-full rounded-full px-6 py-2 font-open-sans text-black text-base",
           )}
         />
         {/* 📩 Button */}
         <button
           type="submit"
           class={cn(
-            "h-[40px] w-full rounded-full bg-[linear-gradient(90deg,rgba(252,176,69,1)_0%,rgba(253,29,29,1)_100%)] font-bakbak uppercase text-white",
+            "h-[40px] cursor-pointer w-full rounded-full bg-[linear-gradient(90deg,rgba(252,176,69,1)_0%,rgba(253,29,29,1)_100%)] font-bakbak uppercase text-white",
             "text-lg",
             "md:text-xl",
           )}>
