--- a/apps/web/src/pages/_components/MainSlider/MainSlider.astro
+++ b/apps/web/src/pages/_components/MainSlider/MainSlider.astro
@@ -4,7 +4,7 @@ import Slide from "./Slide.astro";
 const { posts } = Astro.props;
 ---
 
-<div class="splide splide-main-carrousel bg-transparent h-screen">
+<div class="splide">
   <ArrowButtons />
   <div class="splide__track h-full">
     <ul class="splide__list">
@@ -15,15 +15,6 @@ const { posts } = Astro.props;
     <div class="splide__progress__bar h-3! bg-frustration-yellow!"></div>
   </div>
 </div>
-<style is:global>
-  .splide-main-carrousel .splide__arrow {
-    background: #000;
-    width: 3.5em;
-    height: 3.5em;
-    opacity: 1;
-  }
-</style>
-
 <script>
   import Splide from "@splidejs/splide";
   import "@splidejs/splide/css";
@@ -31,9 +22,7 @@ const { posts } = Astro.props;
   document.addEventListener("DOMContentLoaded", () => {
     const header = document.querySelector("body > header") as HTMLElement;
     const banner = document.querySelector("body #banner") as HTMLElement;
-    const carrousel = document.querySelector(
-      ".splide-main-carrousel",
-    ) as HTMLElement;
+    const carrousel = document.querySelector(".splide") as HTMLElement;
 
     const headerHeight = header?.getBoundingClientRect().height;
     const bannerHeight = banner?.getBoundingClientRect().height;
@@ -41,14 +30,13 @@ const { posts } = Astro.props;
       window.innerHeight - (headerHeight ?? 0) - (bannerHeight ?? 0);
     carrousel.style.height = `${carrouselHeight}px`;
 
-    const splide = new Splide(".splide-main-carrousel", {
+    const splide = new Splide(".splide", {
       type: "loop",
       pagination: false,
       width: "100%",
       autoplay: true,
-      speed: 1000,
       rewind: true,
-      rewindSpeed: 1000,
+      rewindSpeed: 10000,
       perPage: 1,
       height: `${carrouselHeight}px`,
     });
