--- a/apps/web/src/pages/_components/Videos/Videos.astro
+++ b/apps/web/src/pages/_components/Videos/Videos.astro
@@ -2,7 +2,7 @@
 import { readRecords } from "data-access/prisma";
 import SectionTitle from "../SectionTitle.astro";
 import Section from "../Section.astro";
-import { ChevronLeft, ChevronRight } from "lucide-react";
+import { ChevronRight } from "lucide-react";
 
 import { Image } from "astro:assets";
 import { cn } from "@/lib/utils";
@@ -61,7 +61,7 @@ const { data: records }: { data: any[] } = await readRecords({
                 records.length < 2 && "hidden",
               )}>
               <button class="splide__arrow splide__arrow--prev">
-                <ChevronLeft
+                <ChevronRight
                   color="#FFF200"
                   className="scale-125!"
                   size={60}
