--- a/apps/web/src/layout/PostLayout/components/Header/Metadata.astro
+++ b/apps/web/src/layout/PostLayout/components/Header/Metadata.astro
@@ -27,7 +27,7 @@ let DD_MM_YYYY = date
         alt={author.name}
         width={50}
         height={50}
-        src={author.picture}
+        src={author.avatar.url}
         class="inline rounded-full"
       />
     </div>
