--- a/apps/web/src/layout/PostLayout/components/Footer/CardAuthor.astro
+++ b/apps/web/src/layout/PostLayout/components/Footer/CardAuthor.astro
@@ -19,7 +19,7 @@ const { author } = Astro.props;
         alt={author.name}
         width={100}
         height={100}
-        src={author.picture}
+        src={author.avatar.url}
         class="inline rounded-full w-full h-full"
       />
     </div>
@@ -29,9 +29,9 @@ const { author } = Astro.props;
         {author.name}
       </h5>
       {
-        author.role ? (
+        author.description ? (
           <h6 class={cn("font-bebas leading-none!", "text-lg", "sm:text-xl")}>
-            {author.role}
+            {author.description}
           </h6>
         ) : null
       }
