--- a/apps/web/src/pages/_components/ALaUne/Card.astro
+++ b/apps/web/src/pages/_components/ALaUne/Card.astro
@@ -7,30 +7,13 @@ import { getEntry, getCollection } from "astro:content";
 const {
   title,
   author: {
-    node: { userId, name },
+    node: author,
   },
   featuredImage: { node: featuredImage },
   date,
   categories: { nodes: categories },
   slug,
 } = Astro.props;
-
-// Author
-const authors = await getCollection("authors");
-const DEFAULT = await getEntry("authors", "default");
-let AUTHOR = authors.find(({ data: { id } }) => id === userId)?.data;
-
-let author;
-// Use only wordpress informations
-if (!author) {
-  author = {
-    ...AUTHOR,
-    id: userId,
-    name,
-    picture: (AUTHOR ? AUTHOR?.picture : DEFAULT?.data.picture) as any,
-    slug,
-  };
-}
 
 // Categories
 let mainCategories = categories.map(({ name, parent, slug }: any) =>
@@ -94,14 +77,14 @@ let DD_MM_YYYY = new Date(date).toLocaleDateString("fr-FR", {
         <div
           class="hidden text-xs md:text-sm lg:text-base xs:flex items-center gap-1 font-open-sans text-white">
           {
-            author?.picture ? (
+            author?.avatar?.url ? (
               <Image
-                title="Profile picture"
-                alt="alt"
+                title={author?.name}
+                alt={author?.name}
                 width="100"
                 height="100"
-                src={author.picture}
-                class="mr-1 inline w-[13px] rounded-full"
+                src={author?.avatar?.url}
+                class="mr-1 inline w-[15px] rounded-full"
               />
             ) : null
           }
